# lbp_gender_classifier

./: .gitignore  CMakeLists.txt  README.md
src/: LBP.cpp  LBP.h  main.cpp
